update to index

--- a/index.html
+++ b/index.html
@@ -41,5 +41,31 @@
         <img src="img/Gabriel.svg" alt="Bilde av meg selv" />
       </div>
     </div>
+
+    <section>
+      <div>
+        <h2>Prosjekter</h2>
+        <div class="underLine"></div>
+      </div>
+      <div class="prosjekter">
+        <div>
+          <h3>
+            Ameta SaaS
+          </h3>
+          </div>
+          <div>
+          <h3>
+            Prezentive
+          </h3>
+          </div>
+          <div>
+            <h3>
+              Science museeum
+            </h3>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </body>
 </html>
