--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <a class="headerLogo" href="index.html">Gabriel Zouad</a>
       <div class="navbar">
         <ul>
-          <li><a href="">Prosjekter</a></li>
           <li><a href="">Om meg</a></li>
           <li><a href="">Kontakt</a></li>
-          <li><a href="">Github</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">LinkedIn</a></li>
+          <li><a href="https://github.com/Gabrielzouad">Github</a></li>
+          <li><a href="https://www.instagram.com/gabrielzouad/">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/gabrielzouad/">LinkedIn</a></li>
         </ul>
       </div>
     </header>
 
     <div class="heroSection">
+      <img class="backgroundImage" src="img/utviklerbilde.png" alt="Utvilker" />
       <div class="infoContainer">
         <div class="heroLine">
           <div class="greyLine"></div>
@@ -37,35 +37,54 @@
           tiltrekke nye kunder!
         </p>
       </div>
-      <div class="pictureContainer">
-        <img src="img/Gabriel.svg" alt="Bilde av meg selv" />
-      </div>
+      <div class="pictureContainer"></div>
     </div>
 
-    <section>
-      <div>
-        <h2>Prosjekter</h2>
-        <div class="underLine"></div>
+    <section class="prosjektWrapper">
+      <div class="prosjekt-info">
+        <h3>UX design and Front-end development</h3>
+        <h2>Mine Prosjekter</h2>
       </div>
       <div class="prosjekter">
-        <div>
-          <h3>
-            Ameta SaaS
-          </h3>
-          </div>
-          <div>
-          <h3>
-            Prezentive
-          </h3>
-          </div>
-          <div>
-            <h3>
-              Science museeum
-            </h3>
-          </div>
-
+        <div class="prosjekt-item">
+          <a>
+            <div class="prosjekt-navn">
+              <h5>2022</h5>
+              <h2>Ameta - Informasjonsside</h2>
+            </div>
+            <img class="prosjekt-bilde" src="img/ameta.png" alt="ameta bilder" />
+          </a>
+        </div>
+        <div class="prosjekt-item">
+          <a>
+            <div class="prosjekt-navn">
+              <h5>2022</h5>
+              <h2>Prezentive - UI, UX design og implementering</h2>
+            </div>
+            <img class="prosjekt-bilde" src="img/prezentive.png" alt="ameta bilder" />
+          </a>
+        </div>
+        <div class="prosjekt-item">
+          <a>
+            <div class="prosjekt-navn">
+              <h5>2022</h5>
+              <h2>Heydudeshoes Norge - Redesign og implementering av Ecommerce</h2>
+            </div>
+            <img class="prosjekt-bilde" src="img/heydude.png" alt="ameta bilder" />
+          </a>
+        </div>
+        <div class="prosjekt-item">
+          <a>
+            <div class="prosjekt-navn">
+              <h5>2021</h5>
+              <h2>Community Science Museeum - Informasjonsside</h2>
+            </div>
+            <img class="prosjekt-bilde" src="img/science.png" alt="ameta bilder" />
+          </a>
         </div>
       </div>
     </section>
+
+    <footer></footer>
   </body>
 </html>
