--- a/prosjektpage.html
+++ b/prosjektpage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/prosjektpage.css" />
     <script src="https://kit.fontawesome.com/9219f7c72e.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -24,31 +24,7 @@
       </div>
     </header>
 
-    <div class="heroSection">
-      <img class="backgroundImage" src="img/utviklerbilde.png" alt="Utvilker" />
-      <div class="infoContainer">
-        <div class="heroLine">
-          <div class="greyLine"></div>
-          <p>Gabriel Zouad</p>
-        </div>
-        <h1>Front-end utvilker og designer.</h1>
-        <p>
-          Jeg er en konsulent som jobber for at du skal få det beste resultatet i markedet og
-          tiltrekke nye kunder!
-        </p>
-      </div>
-      <div class="pictureContainer"></div>
-    </div>
-
-    <section class="prosjektWrapper">
-      <div class="prosjekt-info">
-        <h3>UX design and Front-end development</h3>
-        <h2>Mine Prosjekter</h2>
-      </div>
-      <div class="prosjekter"></div>
-    </section>
-
-    <footer></footer>
-    <script src="js/index.js"></script>
+    <div class="container"></div>
+    <script src="js/prosjektpage.js"></script>
   </body>
 </html>
