--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <a class="headerLogo" href="index.html">Gabriel Zouad</a>
       <div class="navbar">
         <ul>
-          <li><a href="">Om meg</a></li>
-          <li><a href="">Kontakt</a></li>
+          <li><a href="mailto:gabriel@prezentive.com">Kontakt</a></li>
           <li><a href="https://github.com/Gabrielzouad">Github</a></li>
           <li><a href="https://www.instagram.com/gabrielzouad/">Instagram</a></li>
           <li><a href="https://www.linkedin.com/in/gabrielzouad/">LinkedIn</a></li>
